Support `jlink`